# rigsmith

./: .gitattributes  .gitignore  .gitleaks.toml  .goreleaser.yaml  .rig.json  CHANGELOG.md  CLAUDE.md  README.md  claude-questions.md  go.mod  go.sum  go.work  lefthook.yml  netlify.toml  parity-session-notes.md  roadmap.md  test-parity.md
.changeset/: README.md  build-inherits-release-env.md  clauderig-mv.md  config.json  dev-discovery-skip-overlays.md  eager-lions-whisper.md  gomod-tag-pending-version.md  one-command-bundle-install.md  prune-context-banner.md  prune-force-show-kept.md  quiet-lions-build.md  release-local-flag.md  release.jsonc  rig-portable-commands.md  rig-tengo-commands.md  run-picker-set-default.md  shared-script-runtime.md  shiprig-rehearse-flag.md  shiprig-release-flow-ergonomics.md  surface-duplicate-run-targets.md  velopack-adapter.md  velopack-autosign-and-legible-errors.md  velopack-custom-plist.md  velopack-dmg-install-window.md  velopack-idempotent-repack.md  velopack-multi-ecosystem.md  velopack-windows-cross-sign.md
.claude/: settings.json
changerig/: go.mod  go.sum  main.go
clauderig/: README.md  go.mod  go.sum  main.go
cli/: README.md  go.mod  go.sum  main.go
core/: README.md  go.mod  go.sum
design/: .thumbnail  RigSmith Animated Logo.html  RigSmith Brand.html  RigSmith CLI.html  RigSmith Docs Theme.html  RigSmith Index.html  RigSmith Landing.html  RigSmith Social Assets.html  RigSmith Stickers.html  og.js  (+7 more)
examples/desktop-demo/tauri/src-tauri/: Cargo.toml  tauri.conf.json
examples/desktop-demo/tauri/src-tauri/src/: main.rs
(+887 files in other folders)
