[package]
name = "shiprig-tauri-demo"
version = "0.1.0"
description = "Minimal Tauri app (an empty window) released by shiprig"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[[bin]]
name = "shiprig-tauri-demo"
path = "src/main.rs"
